# SantoorBot

./: CMakeLists.txt  README.md
SantoorBot/: CMakeLists.txt
SantoorBot/include/: EposController.h  EventCallback.h  SantoorBot.h  Slider.h  Striker.h  rtpmidi.h
SantoorBot/src/: EposController.cpp  SantoorBot.cpp  Slider.cpp  Striker.cpp  main.cpp  rtpmidi.cpp
include/: Defines.h  Definitions.h  ErrorDef.h  config.json
